2013-01-07  Ryosuke Niwa  <rniwa@webkit.org>

        Extract a class to represent a test result to simplify PerfTest.parse_output and PageLoadPerfTest._run_with_driver
        https://bugs.webkit.org/show_bug.cgi?id=106172

        Reviewed by Tony Chang.

        Extracted PerfTestMetric, which represents a test result and knows how to compute statistics and convert itself
        to a dictionary. A metric is a type of measurement each test makes such as "Time", "Malloc", and "JSHeap".
        A single test (e.g. html5-full-render.html) may have multiple metrics, each of which is reported as a separate
        test on perf-o-matic and perf. test's results page.

        Also, use python's compute_statistics instead of reading statistics off of DriverOutput to simplify the code.

        * Scripts/webkitpy/performance_tests/perftest.py:
        (PerfTestMetric): Added.
        (PerfTestMetric.__init__): Added.
        (PerfTestMetric.metric): Added.
        (PerfTestMetric.has_values): Added.
        (PerfTestMetric.legacy_chromium_bot_compatible_test_name): Added. Following the legacy convention, "Malloc" and
        "JSHeap" will use "test_name:Malloc" whereas "Time" uses "test_name" itself. We should eventually move these
        conversions to be done on the client side (perf-o-matic and results page).
        (PerfTestMetric.append): Added.
        (PerfTestMetric.to_dict): Added. Computes the statistics and generates the dictionary object that represents
        a result for this metric.
        (PerfTestMetric.metric_to_unit): Added. Each metric maps to exactly one unit (it's not one-to-one).
        (PerfTestMetric.compute_statistics): Moved from PerfTest.

        (PerfTest._create_driver): Extracted from PerfTest.run.
        (PerfTest.run): Given an array of PerfTestMetric, generate the results dictionary. Also print out results
        as needed.
        (PerfTest._run_with_driver):