@@ -1,5 +1,14 @@
 2013-01-07  Ryosuke Niwa  <rniwa@webkit.org>
 
+        Build fix attempt after r138810.
+
+        Apparently python 2.6 is really bad at floating point computation.
+
+        * Scripts/webkitpy/performance_tests/perftestsrunner_integrationtest.py:
+        (MainTest.test_run_memory_test):
+
+2013-01-07  Ryosuke Niwa  <rniwa@webkit.org>
+
         Extract a class to represent a test result to simplify PerfTest.parse_output and PageLoadPerfTest._run_with_driver
         https://bugs.webkit.org/show_bug.cgi?id=106172
 
